# GameRec

backend/: pyproject.toml
frontend/: package.json  tailwind.config.js
frontend/src/: App.svelte
frontend/src/api/: games.js
frontend/src/components/: RecommendationList.svelte  RecommendationListItem.svelte  SearchInput.svelte  SelectedGame.svelte
frontend/src/pages/: Home.svelte
frontent/: package.json  rollup.config.js  tailwind.config.js
frontent/public/: index.html
frontent/src/: App.svelte  main.js
frontent/src/components/: SearchInput.svelte  SelectedGame.svelte
frontent/src/components/layout/: Header.svelte  Layout.svelte
frontent/src/pages/: Home.svelte
management/: README.md
