[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Giuseppe Battistella <giuseppe.battistella@datarisk.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
